2005-09-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Also use
	attributes stored in this->pc if call to GetFileInformationByHandle
	failed.

2005-09-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Only write
	attributes if call to GetFileInformationByHandle was successful.

2005-09-29  Christopher Faylor  <cgf@timesys.com>

	* fork.cc (frok::parent): Simplify error messages.  Don't issue an
	error when child.remember fails.
	(fork): When appropriate, build up an error message from grouped.error.

2005-09-29  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::get_drive_info): Don't call
	EX ioctls on floppy drives.

2005-09-29  Corinna Vinschen  <corinna@vinschen.de>

	* dir.cc (mkdir): Check for trailing /. or /.. component.
	(rmdir): Ditto.
	* path.cc (has_dot_last_component): New function.
	* path.h (has_dot_last_component): Add declaration.

2005-09-29  Corinna Vinschen  <corinna@vinschen.de>

	* crt0.cc: Remove PPC considerations.
	(WinMainCRTStartup): Add symbol as alias to mainCRTStartup.

2005-09-28  Christopher Faylor  <cgf@timesys.com>

	Change name from commune_recv to commune_process throughout.
	Change name from commune_send to commune_request throughout.
	* pinfo.h (PICOM_EXTRASTR): New flag.
	(PICOM_FIFO): Define with new flag.
	(_pinfo::hello_pid): Delete.
	(_pinfo::tothem): Delete.
	(_pinfo::fromthem): Delete.
	(_pinfo::commune_process): Rename from commune_recv.  Add a siginfo_t
	argument to declaration.
	(_pinfo::commune_request): Rename from commune_send.  Change DWORD to
	__uint32_t in declaration.
	* pinfo.cc (_pinfo::commune_process): Rename from commune_recv.  Add
	siginfo_t argument.  Use information from argument rather than reading
	from another pipe.  Synchronize with other process's commune event.
	(_pinfo::commune_request): Rename from commune_send.  Change DWORD to